# internal/dto/auth.go
@@ -10,7 +10,7 @@ type LoginRequest struct {
 }
 
 type LoginResponse struct {
-	Token        string       `json:"token"`
+	AccessToken  string       `json:"token"`
 	RefreshToken string       `json:"refresh_token"`
 	User         UserResponse `json:"user"`
 }
@@ -27,6 +27,8 @@ type UserResponse struct {
 	Status       string    `json:"status"`
 	Department   string    `json:"department"`
 	Position     string    `json:"position"`
+	Supervisor   string    `json:"supervisor"`
+	Address      string    `json:"address"`
 	InviteToken  string    `json:"invite_token"`
 	CreatedAt    time.Time `json:"created_at"`
 	UpdatedAt    time.Time `json:"updated_at"`
@@ -46,6 +48,9 @@ type UserRow struct {
 	InviteToken  *string   `db:"invite_token"`
 	Department   *string   `db:"department"`
 	Position     *string   `db:"position"`
+	Image        *string   `db:"image"`
+	Supervisor   *string   `db:"supervisor"`
+	Address      *string   `db:"address"`
 	CreatedAt    time.Time `db:"created_at"`
 	UpdatedAt    time.Time `db:"updated_at"`
 }
@@ -55,7 +60,7 @@ type RefreshRequest struct {
 }
 
 type RefreshResponse struct {
-	Token        string `json:"token"`
+	AccessToken  string `json:"token"`
 	RefreshToken string `json:"refresh_token"`
 }
 
